version 1.3.0
- fix panel data bugs: observation strings were broken for
  frequency greater than 99, and the "panel" command did not
  obey the "cross-section" option (thanks to Mihai Nica for
  the report)
- update Windows version to gtk 2.4.7
- fix for SUR systems with differing numbers of regressors
  across equations (thanks to Jack Lucchetti)
- slight improvement to main window treeview focusing in
  gtk2 version
- add stack() function to genr command: creates a stacked
  series from a comma-separated list of series, or a
  range of series as in stack(x1..xn)
- add a genr "special": genr markers = ... can be used to
  manipulate the observation marker strings -- details in
  panel.pdf

7/23/2004 version 1.2.9
- fixes for LaTeX printing of autoregressive models
- correct Spanish help strings
- fix font problem for some objects in session window
- fix for exporting time-series data to R version 1.9
- add option to export data to PcGive .dat format (thanks to
  Michal Kurcewicz)
- enable TRAMO analysis of annual time-series data
- Windows version: ensure user directory gets created!  This
  was broken in gretl 1.2.6 and 1.2.7, which could produce
  strange-seeming problems.
- hccm command: ensure that the F-stat shown for the model
  is based on the robust covariance matrix; also ensure
  the robust F-stat is used when robust standard errors are
  selected with the ols command
- add start-up option to dump gretl configuration to a text file
  ('-c' or '--dump')
- small fixes for nonlinear least squares
- Replace fixed IP address for database server with hostname
- Fix for copying material from gretl using Ctrl-C on Windows
- Update Windows version to gtk 2.4.3 runtime
- add "restrict" command for general Wald test of linear
  restrictions on a model
- add "ok(x)" as a short synonym for "!missing(x)" in the 
  context of the genr command
- change smpl behavior: restrictions now cumulate by default
- add "smpl" option: "--replace" makes a sample restriction