@@ -884,7 +884,7 @@ static GtkItemFactoryEntry time_series_model_items[] = {
                                 (d->pd == 4 || d->pd == 12 || \
                                  d->pd == 5 || d->pd == 7))
 
-static void time_series_menu_state (gboolean s)
+void time_series_menu_state (gboolean s)
 {
     if (mdata->ifac != NULL) {
 	flip(mdata->ifac, "/Data/Graph specified vars/Time series plot...", s);
